cilium-shared-gateway/infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-ns
  labels:
    shared-gateway-access: "true"
---
#
# https://gateway-api.sigs.k8s.io/guides/getting-started/#installing-gateway-api
# https://gateway-api.sigs.k8s.io/guides/multiple-ns/#cross-namespace-routing
#
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: infra-ns
spec:
  addresses:
  - type: IPAddress
    value: 192.168.178.250
  gatewayClassName: cilium
  listeners:
  # Only allow in routes in same namespace
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
